# semantic_search

./: .gitignore  LICENSE  cli.py  cli_2.py  pyproject.toml
app/: main.py  routes.py
semantic_search/: __init__.py  core.py  core_2.py  core_service.py  db.py  schemas.py  storage.py
